# fauxdata

./: .gitignore  LOG.md  README.md  pyproject.toml
docs/: index.html
schemas/: events.yml  orders.yml  people.yml
src/fauxdata/: __init__.py  generator.py  main.py  output.py  schema.py  validator.py
src/fauxdata/commands/: generate.py  init.py  preview.py  validate.py
tests/: test_new_fields.py
