[project]
name = "fauxdata-cli"
version = "0.1.3"
description = "CLI for generating and validating fake datasets"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pointblank>=0.22",
    "typer>=0.12",
    "rich>=13",
    "pyfiglet>=1.0",
    "questionary>=2.0",
    "polars>=1.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://aborruso.github.io/fauxdata/"
Repository = "https://github.com/aborruso/fauxdata"
"Bug Tracker" = "https://github.com/aborruso/fauxdata/issues"

[project.scripts]
fauxdata = "fauxdata.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=fauxdata --cov-report=term-missing --cov-fail-under=80"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fauxdata"]
